tests/rosetta/out/Smalltalk/chinese-zodiac.out
/tmp/chinese-zodiac.st:14: parse error, expected ']'
