tests/rosetta/out/Smalltalk/chinese-zodiac.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| animal yinYang element stemChArr branchChArr cz y stem branch sb yr r |
animal := {'Rat'. 'Ox'. 'Tiger'. 'Rabbit'. 'Dragon'. 'Snake'. 'Horse'. 'Goat'. 'Monkey'. 'Rooster'. 'Dog'. 'Pig'}.
yinYang := {'Yang'. 'Yin'}.
element := {'Wood'. 'Fire'. 'Earth'. 'Metal'. 'Water'}.
stemChArr := {'甲'. '乙'. '丙'. '丁'. '戊'. '己'. '庚'. '辛'. '壬'. '癸'}.
branchChArr := {'子'. '丑'. '寅'. '卯'. '辰'. '巳'. '午'. '未'. '申'. '酉'. '戌'. '亥'}.
cz := [:yr :animal :yinYang :element :sc :bc | y := (yr - 4).
stem := (y % 10).
branch := (y % 12).
sb := ((sc at: stem) + (bc at: branch)).
Dictionary from:{'animal'->animal at: branch asString. 'yinYang'->yinYang at: (stem % 2) asString. 'element'->element at: (stem / 2) asInteger asString. 'stemBranch'->sb. 'cycle'->(((y % 60)) + 1)}. ].
{1935. 1938. 1968. 1972. 1976} do: [:yr |.
r := cz value: yr value: animal value: yinYang value: element value: stemChArr value: branchChArr.
Transcript show: ((((((((((((((((((((((yr asString)) + (': '))) + (r at: 'element'))) + (' '))) + (r at: 'animal'))) + (', '))) + (r at: 'yinYang'))) + (', Cycle year '))) + ((r at: 'cycle' asString)))) + (' '))) + (r at: 'stemBranch'))) printString; cr.
].
.
